--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -18,7 +18,7 @@
 		color:$grey;
 	}
 	p {
-		max-width: 90%;
+		max-width: 65%;
 		text-align: center;
 		margin:0 auto;
 		border-bottom: 1px solid $secondary;
